--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.8",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.9",
     "eslint-config-google": "^0.14.0",
     "express": "^4.19.2",
     "http-errors": "^2.0.0",
