--- a/backend/package.json
+++ b/backend/package.json
@@ -2,7 +2,7 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon src/server.js",
@@ -14,6 +14,7 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.6.8",
+    "cache-module": "^0.0.6",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "debug": "^4.3.4",
@@ -24,7 +25,8 @@
     "http-errors": "^2.0.0",
     "jade": "^0.29.0",
     "morgan": "^1.10.0",
-    "mysql2": "^3.9.3"
+    "mysql2": "^3.9.3",
+    "node-cache": "^5.1.2"
   },
   "devDependencies": {
     "eslint": "^8.57.0",
